// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Horizontal bar chart with axis rendering Should render the Horizontal bar chart with axis with numaric yaxis data 1`] = `
<div>
  <div
    class="fui-cart__root"
    id="chart_"
    role="presentation"
  >
    <div
      class="fui-cart__chartWrapper"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
    >
      <svg
        aria-label="Horizontal bar chart with 4 bars. "
        height="300"
        style="display: block;"
        width="650"
      >
        <g
          class="fui-cart__xAxis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          id="xAxisGElementchart_"
          text-anchor="middle"
          transform="translate(0, 265)"
        >
          <path
            class="domain"
            d="M40.5,6V0.5H630.5V6"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(40.5,0)"
          >
            <line
              stroke="currentColor"
              y2="-280"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              0
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(114.25,0)"
          >
            <line
              stroke="currentColor"
              y2="-280"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              5,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(188,0)"
          >
            <line
              stroke="currentColor"
              y2="-280"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              10,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(261.75,0)"
          >
            <line
              stroke="currentColor"
              y2="-280"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              15,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(335.5,0)"
          >
            <line
              stroke="currentColor"
              y2="-280"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              20,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(409.25,0)"
          >
            <line
              stroke="currentColor"
              y2="-280"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              25,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(483,0)"
          >
            <line
              stroke="currentColor"
              y2="-280"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              30,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(556.75,0)"
          >
            <line
              stroke="currentColor"
              y2="-280"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              35,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(630.5,0)"
          >
            <line
              stroke="currentColor"
              y2="-280"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              40,000
            </text>
          </g>
        </g>
        <g
          class="fui-cart__yAxis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          id="yAxisGElementchart_"
          text-anchor="end"
          transform="translate(40, 0)"
        >
          <path
            class="domain"
            d="M-6,265.5H0.5V20.5H-6"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(0,265.5)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              aria-hidden="true"
              dy="0.32em"
              fill="currentColor"
              text-align="start"
              x="-16"
            >
              <tspan
                data-="0"
                dy="0.32em"
                id="BaseSpan-0"
                x="-16"
              />
              <tspan
                dx="1em"
                id="LessLength-0"
                x="-16"
              >
                0
              </tspan>
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,216.5)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              aria-hidden="true"
              dy="0.32em"
              fill="currentColor"
              text-align="start"
              x="-16"
            >
              <tspan
                data-="10k"
                dy="0.32em"
                id="BaseSpan-1"
                x="-16"
              />
              <tspan
                dx="1em"
                id="LessLength-1"
                x="-16"
              >
                10k
              </tspan>
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,167.5)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              aria-hidden="true"
              dy="0.32em"
              fill="currentColor"
              text-align="start"
              x="-16"
            >
              <tspan
                data-="20k"
                dy="0.32em"
                id="BaseSpan-2"
                x="-16"
              />
              <tspan
                dx="1em"
                id="LessLength-2"
                x="-16"
              >
                20k
              </tspan>
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,118.5)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              aria-hidden="true"
              dy="0.32em"
              fill="currentColor"
              text-align="start"
              x="-16"
            >
              <tspan
                data-="30k"
                dy="0.32em"
                id="BaseSpan-3"
                x="-16"
              />
              <tspan
                dx="1em"
                id="LessLength-3"
                x="-16"
              >
                30k
              </tspan>
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,69.49999999999999)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              aria-hidden="true"
              dy="0.32em"
              fill="currentColor"
              text-align="start"
              x="-16"
            >
              <tspan
                data-="40k"
                dy="0.32em"
                id="BaseSpan-4"
                x="-16"
              />
              <tspan
                dx="1em"
                id="LessLength-4"
                x="-16"
              >
                40k
              </tspan>
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,20.5)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              aria-hidden="true"
              dy="0.32em"
              fill="currentColor"
              text-align="start"
              x="-16"
            >
              <tspan
                data-="50k"
                dy="0.32em"
                id="BaseSpan-5"
                x="-16"
              />
              <tspan
                dx="1em"
                id="LessLength-5"
                x="-16"
              >
                50k
              </tspan>
            </text>
          </g>
        </g>
        <g>
          <rect
            aria-label="20%. 2020/04/30."
            aria-labelledby="toolTipcallout1"
            data-is-focusable="true"
            fill="#00bcf2"
            height="32"
            opacity="1"
            role="img"
            rx="0"
            tabindex="0"
            width="295"
            x="40"
            y="4"
          />
          <rect
            aria-label="37%. 2020/04/30."
            aria-labelledby="toolTipcallout1"
            data-is-focusable="true"
            fill="#00188f"
            height="32"
            opacity="1"
            role="img"
            rx="0"
            tabindex="0"
            width="368.75"
            x="40"
            y="102"
          />
          <rect
            aria-label="88%. 2020/04/30."
            aria-labelledby="toolTipcallout1"
            data-is-focusable="true"
            fill="#002050"
            height="32"
            opacity="1"
            role="img"
            rx="0"
            tabindex="0"
            width="590"
            x="40"
            y="185.29999999999998"
          />
          <rect
            aria-label="10%. 2020/04/30."
            aria-labelledby="toolTipcallout1"
            data-is-focusable="true"
            fill="#0078d4"
            height="32"
            opacity="1"
            role="img"
            rx="0"
            tabindex="0"
            width="147.5"
            x="40"
            y="224.5"
          />
        </g>
      </svg>
    </div>
    <div
      class="fui-cart__legendContainer"
    >
      <div
        aria-label="Legends"
        aria-multiselectable="false"
        class="fui-legend__root"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        role="listbox"
      >
        <div
          class="fui-Overflow fui-legend__resizableArea"
          style="text-align: unset;"
        >
          <button
            aria-label="Oranges"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #0078d4; --rect-borderColor: #0078d4;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078d4, #0078d4);"
            />
            <div
              class="fui-legend__text"
            >
              Oranges
            </div>
          </button>
          <button
            aria-label="Grapes"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #00bcf2; --rect-borderColor: #00bcf2;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(0, 188, 242); border-color: #00bcf2; --rect-content-high-contrast: linear-gradient(to right, #00bcf2, #00bcf2);"
            />
            <div
              class="fui-legend__text"
            >
              Grapes
            </div>
          </button>
          <button
            aria-label="Apples"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #00188f; --rect-borderColor: #00188f;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(0, 24, 143); border-color: #00188f; --rect-content-high-contrast: linear-gradient(to right, #00188f, #00188f);"
            />
            <div
              class="fui-legend__text"
            >
              Apples
            </div>
          </button>
          <button
            aria-label="Bananas"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #002050; --rect-borderColor: #002050;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(0, 32, 80); border-color: #002050; --rect-content-high-contrast: linear-gradient(to right, #002050, #002050);"
            />
            <div
              class="fui-legend__text"
            >
              Bananas
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Horizontal bar chart with axis rendering Should render the Horizontal bar chart with axis with string yaxis data 1`] = `
<div>
  <div
    class="fui-cart__root"
    id="chart_"
    role="presentation"
  >
    <div
      class="fui-cart__chartWrapper"
      data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
    >
      <svg
        aria-label="Horizontal bar chart with 4 bars. "
        height="300"
        style="display: block;"
        width="650"
      >
        <g
          class="fui-cart__xAxis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          id="xAxisGElementchart_"
          text-anchor="middle"
          transform="translate(0, 265)"
        >
          <path
            class="domain"
            d="M40.5,6V0.5H630.5V6"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(40.5,0)"
          >
            <line
              stroke="currentColor"
              y2="-280"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              0
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(158.5,0)"
          >
            <line
              stroke="currentColor"
              y2="-280"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              1,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(276.5,0)"
          >
            <line
              stroke="currentColor"
              y2="-280"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              2,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(394.5,0)"
          >
            <line
              stroke="currentColor"
              y2="-280"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              3,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(512.5,0)"
          >
            <line
              stroke="currentColor"
              y2="-280"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              4,000
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(630.5,0)"
          >
            <line
              stroke="currentColor"
              y2="-280"
            />
            <text
              aria-hidden="true"
              dy="0.71em"
              fill="currentColor"
              y="10"
            >
              5,000
            </text>
          </g>
        </g>
        <g
          class="fui-cart__yAxis"
          fill="none"
          font-family="sans-serif"
          font-size="10"
          id="yAxisGElementchart_"
          text-anchor="end"
          transform="translate(40, 0)"
        >
          <path
            class="domain"
            d="M-6,249.5H0.5V36.5H-6"
            stroke="currentColor"
          />
          <g
            class="tick"
            opacity="1"
            transform="translate(0,222.375)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              text-align="start"
              x="-16"
            >
              <tspan
                data-="String Four"
                dy="0.32em"
                id="BaseSpan-0"
                x="-16"
              />
              <tspan
                dx="1em"
                id="LessLength-0"
                x="-16"
              >
                String Four
              </tspan>
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,169.125)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              text-align="start"
              x="-16"
            >
              <tspan
                data-="String Three"
                dy="0.32em"
                id="BaseSpan-1"
                x="-16"
              />
              <tspan
                dx="1em"
                id="LessLength-1"
                x="-16"
              >
                String Three
              </tspan>
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,115.875)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              text-align="start"
              x="-16"
            >
              <tspan
                data-="String Two"
                dy="0.32em"
                id="BaseSpan-2"
                x="-16"
              />
              <tspan
                dx="1em"
                id="LessLength-2"
                x="-16"
              >
                String Two
              </tspan>
            </text>
          </g>
          <g
            class="tick"
            opacity="1"
            transform="translate(0,62.625)"
          >
            <line
              stroke="currentColor"
              x2="-6"
            />
            <text
              dy="0.32em"
              fill="currentColor"
              text-align="start"
              x="-16"
            >
              <tspan
                data-="String One"
                dy="0.32em"
                id="BaseSpan-3"
                x="-16"
              />
              <tspan
                dx="1em"
                id="LessLength-3"
                x="-16"
              >
                String One
              </tspan>
            </text>
          </g>
        </g>
        <g>
          <rect
            aria-label="1000. String One."
            aria-labelledby="toolTipcallout5"
            data-is-focusable="true"
            fill="#0078d4"
            height="32"
            opacity="1"
            role="img"
            rx="0"
            tabindex="0"
            transform="translate(0,10.625)"
            width="118"
            x="40"
            y="36"
          />
          <rect
            aria-label="5000. String Two."
            aria-labelledby="toolTipcallout5"
            data-is-focusable="true"
            fill="#00bcf2"
            height="32"
            opacity="1"
            role="img"
            rx="0"
            tabindex="0"
            transform="translate(0,10.625)"
            width="590"
            x="40"
            y="89.25"
          />
          <rect
            aria-label="3000. String Three."
            aria-labelledby="toolTipcallout5"
            data-is-focusable="true"
            fill="#00188f"
            height="32"
            opacity="1"
            role="img"
            rx="0"
            tabindex="0"
            transform="translate(0,10.625)"
            width="354"
            x="40"
            y="142.5"
          />
          <rect
            aria-label="2000. String Four."
            aria-labelledby="toolTipcallout5"
            data-is-focusable="true"
            fill="#002050"
            height="32"
            opacity="1"
            role="img"
            rx="0"
            tabindex="0"
            transform="translate(0,10.625)"
            width="236"
            x="40"
            y="195.75"
          />
        </g>
      </svg>
    </div>
    <div
      class="fui-cart__legendContainer"
    >
      <div
        aria-label="Legends"
        aria-multiselectable="false"
        class="fui-legend__root"
        data-tabster="{\\"mover\\":{\\"cyclic\\":false,\\"direction\\":2,\\"memorizeCurrent\\":true}}"
        role="listbox"
      >
        <div
          class="fui-Overflow fui-legend__resizableArea"
          style="text-align: unset;"
        >
          <button
            aria-label="undefined"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #0078d4; --rect-borderColor: #0078d4;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(0, 120, 212); border-color: #0078d4; --rect-content-high-contrast: linear-gradient(to right, #0078d4, #0078d4);"
            />
            <div
              class="fui-legend__text"
            />
          </button>
          <button
            aria-label="undefined"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #00bcf2; --rect-borderColor: #00bcf2;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(0, 188, 242); border-color: #00bcf2; --rect-content-high-contrast: linear-gradient(to right, #00bcf2, #00bcf2);"
            />
            <div
              class="fui-legend__text"
            />
          </button>
          <button
            aria-label="undefined"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #00188f; --rect-borderColor: #00188f;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(0, 24, 143); border-color: #00188f; --rect-content-high-contrast: linear-gradient(to right, #00188f, #00188f);"
            />
            <div
              class="fui-legend__text"
            />
          </button>
          <button
            aria-label="undefined"
            aria-selected="false"
            class="fui-Button fui-legend__legend"
            data-overflow-item=""
            role="option"
            style="--rect-height: 12px; --rect-backgroundColor: #002050; --rect-borderColor: #002050;"
            type="button"
          >
            <div
              class="fui-legend__rect"
              style="height: 12px; background-color: rgb(0, 32, 80); border-color: #002050; --rect-content-high-contrast: linear-gradient(to right, #002050, #002050);"
            />
            <div
              class="fui-legend__text"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
